--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
+    "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
-    "react-router-dom": "^6.26.2"
+    "react-select": "^5.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
